--- a/src/app/crud/product-list/product-list.component.html
+++ b/src/app/crud/product-list/product-list.component.html
@@ -1,1 +1,12 @@
+<div class ="row">
+  <div class="col-12 p-5">
+    <ag-grid-angular
+      style="width:100%; height:500px;"
+      class="ag-theme-alpine"
+      [rowData]="rowData"
+      [columnDefs]="columnDefs"
+      >
+    </ag-grid-angular>
+  </div>
+</div>
 <p>product-list works!</p>
